--- a/css/register.css
+++ b/css/register.css
@@ -1,5 +1,5 @@
 body{
-    background:black;
+    background:rgb(49, 1, 49);
 }
 #container{
     width:400px;
@@ -54,3 +54,66 @@ input[type=submit]:hover {
     max-width: 50%;
 }
 
+.password_label {
+    position: relative
+}
+
+.psw {
+    font-size: 1em;
+    background:transparent;
+    color: #f9f9f9;
+    border: 2px solid #7a7a7a;
+    border-radius: 5px;
+    padding: 1rem 1.2rem;
+    transition: all 0.2s;
+}
+
+.psw:focus {
+    border-color: #ff4754;
+}
+
+label .password-icon {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 20px;
+    color:black;
+    transition: all 0.2s;
+    right: -385px;
+}
+
+
+
+label .password-icon .feather-eye-off {
+    display: none;
+}
+
+label .password-icon:hover {
+    cursor: pointer;
+    color: #ff4754;
+}
+
+label .password-icon-conf {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    top: 42%;
+    transform: translateY(-50%);
+    width: 20px;
+    color:black;
+    transition: all 0.2s;
+    right: -385px;
+}
+
+
+
+label .password-icon-conf .feather-eye-off {
+    display: none;
+}
+
+label .password-icon-conf:hover {
+    cursor: pointer;
+    color: #ff4754;
+}
