--- a/css/principal.css
+++ b/css/principal.css
@@ -144,9 +144,9 @@ h5 {
 }
 
 .navFooterLine {
-    margin-left: 350px;
+    margin-left: 19%;
     margin-bottom: 20px;
-    column-width: 15em;
+    column-width: 18em;
     column-rule: 1px solid rgb(75, 70, 74);
     justify-content: center;
 }
@@ -160,12 +160,11 @@ h5 {
 .nav_a {
     text-decoration: none;
     color: black;
-    margin-right: -20px;
     align-items: center;
 }
 
 .nav_last {
-    margin-left: 650px;
+    margin-left: 42%;
 }
 
 .navbar {
@@ -190,4 +189,9 @@ a {
 
 .nav-info {
     margin-right: -20px;
+}
+
+.d-block {
+    width: 100%;
+    height: 450px;
 }
