Debut gestion des stocks

--- a/css/panier.css
+++ b/css/panier.css
@@ -83,7 +83,7 @@ h4 {
     border: 1px solid black;
 }
 
-#valider {
+#Valider {
     background-color: green;
     color: white;
     margin-left: 2%;
